<resources>
    <string name="app_name">DrInternational</string>
    <string name="NewGame">New Game</string>
    <string name="SelectMap">Select Map</string>
    <string name="share_on_facebook">SHARE</string>

    <string name="error">ERROR</string>
    <string name="new_game">New Game</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="klucTopScore">kljuctopscore25255525</string>
    <string name="HighScoreText">High score: </string>
    <string name="ScoreText">Score: </string>
    <string name="game_over">GAME OVER</string>
    <string name="americas">Americas</string>
    <string name="eu">EU</string>
    <string name="world">WORLD</string>
    <string name="map_select">Choose which location you want to play:</string>
</resources>