<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/gradient_background"
    >

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textSize="20dp"

        android:text="@string/error" />

    <TextView
        android:id="@+id/HighScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:layout_alignBottom="@id/ScoreText"
        android:layout_centerInParent="true"
        android:textSize="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fb"
        android:text="@string/game_over"
        android:layout_centerInParent="true"
        android:textSize="40dp"
        android:padding="50dp"

        />




        <Button
            android:id="@id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/share_on_facebook"
            android:onClick="onClickShare"/>






    <Button
        android:id="@+id/NewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MainMenu"
        android:layout_centerInParent="true"
        android:onClick="onClickNG"
        android:text="@string/new_game" />

    <Button
        android:id="@id/MainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="onClickRM"
        android:text="@string/return_to_main_menu" />
</RelativeLayout>