<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ac3SelectMap"
    android:background="@drawable/gradient_background"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/map_select"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />


        <Button
            android:id="@+id/America"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:onClick="onClickA"
            android:text="@string/americas" />
        <Button
            android:id="@+id/EU"
            android:layout_width="200dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content"

            android:text="@string/eu"
            android:layout_margin="3dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/America"
            android:onClick="onClickE"/>
        <Button
            android:id="@+id/WORLD"
            android:layout_width="200dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_below="@id/EU"

            android:text="@string/world"
            android:layout_centerHorizontal="true"
            android:onClick="onClickW"/>




    </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
